fix: corrected --tds-dropdown-scrollbar-thumb-color for dark mode

--- a/packages/core/src/components/dropdown/dropdown-vars.scss
+++ b/packages/core/src/components/dropdown/dropdown-vars.scss
@@ -34,7 +34,7 @@
   --tds-dropdown-placeholder-color: var(--tds-grey-400);
   --tds-dropdown-disabled-color: var(--tds-grey-800);
   --tds-dropdown-scrollbar-track-color: var(--tds-grey-868);
-  --tds-dropdown-scrollbar-thumb-color: rgb(0 0 0 / 38%);
+  --tds-dropdown-scrollbar-thumb-color: rgb(255 255 255 / 38%);
 
   .tds-mode-variant-primary {
     --tds-dropdown-bg: var(--tds-grey-868);
